--- a/rumus1.css
+++ b/rumus1.css
@@ -2,10 +2,38 @@ body {
     
 }
 
+/* HEADER */
+
+.nav-masthead .nav-link {
+    padding: .25rem 0;
+    font-weight: 700;
+    color: rgba(255, 255, 255, .5);
+    background-color: transparent;
+    border-bottom: .25rem solid transparent;
+  }
+  
+  .nav-masthead .nav-link:hover,
+  .nav-masthead .nav-link:focus {
+    border-bottom-color: rgba(255, 255, 255, .25);
+  }
+  
+  .nav-masthead .nav-link + .nav-link {
+    margin-left: 1rem;
+  }
+  
+  .nav-masthead .active {
+    color: #fff;
+    border-bottom-color: #fff;
+  }
+  
+
+/* CONTENT */
+
 #content {
     width: 100%;
     height: 1500px;
     position: center;
+    margin-top: 400px;
     
 }
 
@@ -13,11 +41,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 400px;
+    border: solid 0.5px white;
+    border-radius: 8px;
+    padding: 20px
 }
 
 .label-panjang {
     align-content: center;
+    font-size: 20px;
 
 }
 
@@ -26,10 +57,21 @@ body {
     margin-right: 15px;
 }
 
+.label-tinggi {
+    align-content: center;
+    font-size: 20px;
+
+}
 .tinggi {
 
     margin-left: 15px;
     margin-right: 15px;
+}
+
+.label-lebar {
+    align-content: center;
+    font-size: 20px;
+
 }
 
 .lebar {
@@ -38,10 +80,14 @@ body {
 }
 
 .tombol-submit {
+    font-size: 20px;
+    font-weight: bold;
     padding: 10px 60px;
     
 }
 
 .hasil {
+    align-content: center;
+    font-size: 20px;
     margin-left: 15px;
 }
