--- a/rumus1.css
+++ b/rumus1.css
@@ -1,15 +1,17 @@
-body {
-    
-}
 
 /* HEADER */
 
+.mb-auto {
+    display: flex;
+    justify-content: space-around;
+}
 .nav-masthead .nav-link {
     padding: .25rem 0;
     font-weight: 700;
     color: rgba(255, 255, 255, .5);
     background-color: transparent;
     border-bottom: .25rem solid transparent;
+    margin-left: 900px;
   }
   
   .nav-masthead .nav-link:hover,
@@ -29,11 +31,16 @@ body {
 
 /* CONTENT */
 
+.logo-image {
+    height: 650px;
+    width: 1500px;
+}
+
 #content {
     width: 100%;
-    height: 1500px;
+    height: 850px;
     position: center;
-    margin-top: 400px;
+    /* margin-top: 400px; */
     
 }
 
@@ -43,7 +50,10 @@ body {
     align-items: center;
     border: solid 0.5px white;
     border-radius: 8px;
-    padding: 20px
+    padding: 20px;
+    position: absolute;
+    margin-left: 325px;
+    margin-bottom: 900px;
 }
 
 .label-panjang {
